FAIRPC-29: added materialized view update to reindexing, ignored h2 tests